Version 2.8.6
-------------
Remove dependency on (deprecated) GLee.




Version 2.8.5 (27 April 2017)
-----------------------------
Fix audio loss when inserting without audio in clip editor (regression).
Fix compiler error and warnings for gcc 7 (https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=853520)
Fix regression in mkv_decoder.
Fix compiler warnings for openGL plugin.
Change max seek allowed from 1 second to 2 seconds in avformat decoder.
Update css state selectors for gtk 3.18+
Experimental support for Wayland.
Updated translation to Ukranian (thaks Yuri).



Version 2.8.4 (14 Jan 2017)
---------------------------
Fix error in Insert Silence (regression).
Fix minor issue with Undo Insert Silence.
Minor GUI updates for Insert Silence dialog.




Version 2.8.3 (28 December 2016)
--------------------------------
Correct errors in Cancel Insert fix from 2.8.2
Fix some minor issues with alarm timers.
Fix trivial focus issue with Insert dialog in Clip Editor.




Version 2.8.2 (27 November 2016)
--------------------------------
Fix loss of audio when cancelling Insert operation in Clip Editor.
Minor compilation fix for Toonz plugins.
Updated translation to Ukranian (Yuri Chornoivan).






Version 2.8.1 (23 October 2016)
------------------------------
Fix various security issues on multi-user systems - see:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=756565
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=798043

Fix audio length encoding bug:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=810146

Fix some compilation issues.





Version 2.8.0 (3 Sep 2016)
--------------------------
Correct blank frame fix from 2.6.8 (add one to last frame).
Fix coding error when centering windows.
Correctly parse the path variables for frei0r, libvisual and ladspa.
Set nicer defaults for RGBDelay effect.




Version 2.6.8 (27 Aug 2016)
---------------------------
Fix bug which could result in blank frames / hang after deleting frames.